--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -3,6 +3,10 @@ include: join("rules","init.smk")
 
 localrules: all
 rule all:
-    input:
+    input: 
+        expand(join(fq_dir,'{sample_id}_R1.fastq.gz'),sample_id=sample_list),
+        expand(join(fq_dir,'{sample_id}_R2.fastq.gz'),sample_id=sample_list),
+        expand(join(trim_dir,'{sample_id}_R1.trimmed.fastq.gz'),sample_id=sample_list),
+        expand(join(trim_dir,'{sample_id}_R1.trimmed.fastq.gz'),sample_id=sample_list),
 
-include: join("rules","dummy.smk")
+include: join("rules","pre-process.smk")
