--- a/resources/cluster.yaml
+++ b/resources/cluster.yaml
@@ -6,5 +6,5 @@ __default__:
     partition: ccr,norm
     time: 00-08:00:00
     threads: 32
-    output: logs/${{SLURM_JOBID}}.%j.{rule}.{wildcards}.out
-    error: logs/${{SLURM_JOBID}}.%j.{rule}.{wildcards}.err
+    output: ${{SLURM_JOBID}}.%j.{params.rname}.{wildcards}.out
+    error: ${{SLURM_JOBID}}.%j.{params.rname}.{wildcards}.err
