formatting, add links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project Information
-site_name: ccbr1214
+site_name: MNaseSeq Pipeline
 site_author: Samantha Sevilla, Ph.D.
 site_description: >-
   MNaseSeq Pipeline
