--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,8 +18,8 @@ run_create_bed: "N" # if the selected bed file is not created, set the flag to Y
 genes_of_interest: "WORKDIR/genes_of_interest.txt" # single column text file of genes of interest
 pi_created_selected_bed: "WORKDIR/intervals_of_interest.bed" #bed file with intervals of interest to subset data
 
-fragment_length_min: 140
-fragment_length_max: 160
+fragment_length_min: "140"
+fragment_length_max: "160"
 
 limit: 1000000
 max_distance: 1500
