--- a/resources/index.yaml
+++ b/resources/index.yaml
@@ -1,2 +1,9 @@
-hg19: "/data/CCBR_Pipeliner/ccbr1214/indices/hg19"
-hg38: "/data/CCBR_Pipeliner/ccbr1214/indices/hg38"
+hg19: 
+  usc:
+    shorthand: "hg19"
+    source_link: "https://genome-idx.s3.amazonaws.com/bt/hg19.zip"
+    generated: "/data/CCBR_Pipeliner/ccbr1214/indices/hg19/hg19"
+  ncbi:
+    shorthand: "GRCh37"
+    source: https://genome-idx.s3.amazonaws.com/bt/GRCh37.zip"
+    generated: "/data/CCBR_Pipeliner/ccbr1214/indices/hg19/GRCh37"
